--- a/dev/sass/media/_media_min_width1025.scss
+++ b/dev/sass/media/_media_min_width1025.scss
@@ -1,3 +1,11 @@
 @media (min-width: 1025px) {
-
+    .sub-menu {
+		@include custom-decorate-r;
+    }
+    .home-top__benefits{
+      position: relative;
+      &::before{
+          @include custom-decorate-l;
+      }
+    }
 }
