--- a/dev/sass/other/project-tab.scss
+++ b/dev/sass/other/project-tab.scss
@@ -35,7 +35,7 @@
         border-bottom:none;
         width: 100%;
         text-align: center;
-        color: #626874;
+        color: #5C5F65;
         font-size: 18px;
         font-weight: 600;
         position: relative;
