--- a/dev/templates/about-section.html
+++ b/dev/templates/about-section.html
@@ -5,16 +5,7 @@
 				<div class="about__text">
 					<h2>Дізнайтесь про нас більше!</h2>
 					<p>
-						Для нас благодійність — це насамперед вміння почути чужий біль. Це
-						вміння розділити чужий біль. Це системна боротьба із системними
-						проблемами. Це відкритість і, звичайно, націленість на результат.
-						Благодійністю я займався завжди.
-					</p>
-					<p>
-						Благодійний фонд «Перша Зірка» пропонує вам долучитися до одного чи
-						декількох з існуючих проектів по збору коштів в ім’я Добра або
-						стартувати власну благодійну ініціативу у рідному місті чи селі.
-						Наша місія — поширювати та підтримувати будь-які прояви людяності
+						Для нас благодійність — це насамперед вміння почути чужий біль. Це вміння розділити чужий біль. Це системна боротьба із системними проблемами. Це відкритість і, звичайно, націленість на результат. Благодійністю я займався завжди. Благодійний фонд «Обіруч» пропонує вам долучитися до одного чи декількох з існуючих проектів по збору коштів в ім’я Добра або стартувати власну благодійну ініціативу у рідному місті чи селі. Наша місія — поширювати та підтримувати будь-які прояви людяності 
 					</p>
 					<div class="row-custom row-btn">
 						<a href="about-page.html" class="btn btn-primary">
