--- a/dev/templates/partners-slider.html
+++ b/dev/templates/partners-slider.html
@@ -3,12 +3,10 @@
         <h2 class="title-icon">
             <i class="icon-svg icon-messages"></i>
 
-            <span>Слово нашим партнерам</span>
+            <span>Що кажуть наші партнери</span>
         </h2>
         <p class="title-descr">
-            Створіть свою кампанію зі збору коштів на підтримку одного із сотень
-            проектів на dobro.ua. Запропонуйте друзям її підтримати і результат не
-            змусить на себе чекати
+            Ми не хочемо називати людей, які скористалися нашим сервісом, клієнтами. Вони — наші партнери, побратими та друзі. Хай вони розкажуть про себе самі
         </p>
     </div>
     <div class="wrapper-partner-slider">
@@ -20,13 +18,7 @@
                 <div class="item-partner-coment__name">Костантин Хливнюк</div>
                 <div class="item-partner-coment__position">директор Watson’s</div>
                 <p class="item-partner-coment__coment">
-                    Робота з фондом «Перша Зірка» була однією з ключових напрямків
-                    соціальної відповідальності нашого бренду. За період нашої співпраці
-                    вдалося зібрати більше 78 тис.грн., і такий результат говорить сам
-                    за себе. Нам імпонують не лише цілі фонду, який має на меті допомогу
-                    та розвиток молодого покоління, але й підхід до організації роботи:
-                    креативна реалізація активностей, активне залучення волонтерів та
-                    інтерактивність в спілкуванні з аудиторією.
+                  Робота з фондом «Обіруч» була однією з ключових напрямків соціальної відповідальності нашого бренду. За період нашої співпраці вдалося зібрати більше 78 тис.грн., і такий результат говорить сам за себе. Нам імпонують не лише цілі фонду, який має на меті допомогу та розвиток молодого покоління, але й підхід до організації роботи: креативна реалізація активностей, активне залучення волонтерів та інтерактивність в спілкуванні з аудиторією.
                 </p>
             </div>
             <div class="item-partner-coment">
@@ -36,13 +28,7 @@
                 <div class="item-partner-coment__name">Костантин Хливнюк</div>
                 <div class="item-partner-coment__position">директор Watson’s</div>
                 <p class="item-partner-coment__coment">
-                    Робота з фондом «Перша Зірка» була однією з ключових напрямків
-                    соціальної відповідальності нашого бренду. За період нашої співпраці
-                    вдалося зібрати більше 78 тис.грн., і такий результат говорить сам
-                    за себе. Нам імпонують не лише цілі фонду, який має на меті допомогу
-                    та розвиток молодого покоління, але й підхід до організації роботи:
-                    креативна реалізація активностей, активне залучення волонтерів та
-                    інтерактивність в спілкуванні з аудиторією.
+                  Робота з фондом «Обіруч» була однією з ключових напрямків соціальної відповідальності нашого бренду. За період нашої співпраці вдалося зібрати більше 78 тис.грн., і такий результат говорить сам за себе. Нам імпонують не лише цілі фонду, який має на меті допомогу та розвиток молодого покоління, але й підхід до організації роботи: креативна реалізація активностей, активне залучення волонтерів та інтерактивність в спілкуванні з аудиторією.
                 </p>
             </div>
             <div class="item-partner-coment">
@@ -52,13 +38,7 @@
                 <div class="item-partner-coment__name">Костантин Хливнюк</div>
                 <div class="item-partner-coment__position">директор Watson’s</div>
                 <p class="item-partner-coment__coment">
-                    Робота з фондом «Перша Зірка» була однією з ключових напрямків
-                    соціальної відповідальності нашого бренду. За період нашої співпраці
-                    вдалося зібрати більше 78 тис.грн., і такий результат говорить сам
-                    за себе. Нам імпонують не лише цілі фонду, який має на меті допомогу
-                    та розвиток молодого покоління, але й підхід до організації роботи:
-                    креативна реалізація активностей, активне залучення волонтерів та
-                    інтерактивність в спілкуванні з аудиторією.
+                  Робота з фондом «Обіруч» була однією з ключових напрямків соціальної відповідальності нашого бренду. За період нашої співпраці вдалося зібрати більше 78 тис.грн., і такий результат говорить сам за себе. Нам імпонують не лише цілі фонду, який має на меті допомогу та розвиток молодого покоління, але й підхід до організації роботи: креативна реалізація активностей, активне залучення волонтерів та інтерактивність в спілкуванні з аудиторією.
                 </p>
             </div>
             <div class="item-partner-coment">
@@ -68,18 +48,12 @@
                 <div class="item-partner-coment__name">Костантин Хливнюк</div>
                 <div class="item-partner-coment__position">директор Watson’s</div>
                 <p class="item-partner-coment__coment">
-                    Робота з фондом «Перша Зірка» була однією з ключових напрямків
-                    соціальної відповідальності нашого бренду. За період нашої співпраці
-                    вдалося зібрати більше 78 тис.грн., і такий результат говорить сам
-                    за себе. Нам імпонують не лише цілі фонду, який має на меті допомогу
-                    та розвиток молодого покоління, але й підхід до організації роботи:
-                    креативна реалізація активностей, активне залучення волонтерів та
-                    інтерактивність в спілкуванні з аудиторією.
+                  Робота з фондом «Обіруч» була однією з ключових напрямків соціальної відповідальності нашого бренду. За період нашої співпраці вдалося зібрати більше 78 тис.грн., і такий результат говорить сам за себе. Нам імпонують не лише цілі фонду, який має на меті допомогу та розвиток молодого покоління, але й підхід до організації роботи: креативна реалізація активностей, активне залучення волонтерів та інтерактивність в спілкуванні з аудиторією.
                 </p>
             </div>
         </div>
     </div>
-    <a href="reviews.html" class="btn btn-success">
+    <a href="reviews.html" class="btn btn-primary">
         <i class="icon-svg icon-check-mes"></i>
         <span>Більше відгуків</span>
     </a>
