--- a/dev/templates/similar-projects-slider.html
+++ b/dev/templates/similar-projects-slider.html
@@ -15,8 +15,8 @@
                         <a href="project-item.html">Збір коштів на прихисток для біжинців на Вінничині</a>
                         <div class="progress">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60" height="60" width="60" data-value="55">
-                                <circle class="bg" cx="30" cy="30" r="25" fill="none" stroke="#EDF1F4" stroke-miterlimit="10" />
-                                <circle class="meter" cx="30" cy="30" r="25" fill="none" stroke="#FFD018" stroke-dashoffset="157" stroke-dasharray="157" stroke-miterlimit="10" />
+                                <circle class="bg" cx="30" cy="30" r="25" fill="none" stroke="#F5F2EA" stroke-miterlimit="10" />
+                                <circle class="meter" cx="30" cy="30" r="25" fill="none" stroke="#FFD600" stroke-dashoffset="157" stroke-dasharray="157" stroke-miterlimit="10" />
                             </svg>
                         </div>
                     </div>
@@ -45,8 +45,8 @@
                         <a href="project-item.html">Допомога захисникам та захисницям України</a>
                         <div class="progress">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60" height="60" width="60" data-value="44">
-                                <circle class="bg" cx="30" cy="30" r="25" fill="none" stroke="#EDF1F4" stroke-miterlimit="10" />
-                                <circle class="meter" cx="30" cy="30" r="25" fill="none" stroke="#FFD018" stroke-dashoffset="157" stroke-dasharray="157" stroke-miterlimit="10" />
+                                <circle class="bg" cx="30" cy="30" r="25" fill="none" stroke="#F5F2EA" stroke-miterlimit="10" />
+                                <circle class="meter" cx="30" cy="30" r="25" fill="none" stroke="#FFD600" stroke-dashoffset="157" stroke-dasharray="157" stroke-miterlimit="10" />
                             </svg>
                         </div>
                     </div>
@@ -75,8 +75,8 @@
                         <a href="project-item.html">Збір коштів на прихисток для біжинців на Вінничині</a>
                         <div class="progress">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60" height="60" width="60" data-value="25">
-                                <circle class="bg" cx="30" cy="30" r="25" fill="none" stroke="#EDF1F4" stroke-miterlimit="10" />
-                                <circle class="meter" cx="30" cy="30" r="25" fill="none" stroke="#FFD018" stroke-dashoffset="157" stroke-dasharray="157" stroke-miterlimit="10" />
+                                <circle class="bg" cx="30" cy="30" r="25" fill="none" stroke="#F5F2EA" stroke-miterlimit="10" />
+                                <circle class="meter" cx="30" cy="30" r="25" fill="none" stroke="#FFD600" stroke-dashoffset="157" stroke-dasharray="157" stroke-miterlimit="10" />
                             </svg>
                         </div>
                     </div>
@@ -105,8 +105,8 @@
                         <a href="project-item.html">Допомога захисникам та захисницям України</a>
                         <div class="progress">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60" height="60" width="60" data-value="100">
-                                <circle class="bg" cx="30" cy="30" r="25" fill="none" stroke="#EDF1F4" stroke-miterlimit="10" />
-                                <circle class="meter" cx="30" cy="30" r="25" fill="none" stroke="#FFD018" stroke-dashoffset="157" stroke-dasharray="157" stroke-miterlimit="10" />
+                                <circle class="bg" cx="30" cy="30" r="25" fill="none" stroke="#F5F2EA" stroke-miterlimit="10" />
+                                <circle class="meter" cx="30" cy="30" r="25" fill="none" stroke="#FFD600" stroke-dashoffset="157" stroke-dasharray="157" stroke-miterlimit="10" />
                             </svg>
                         </div>
                     </div>
