--- a/dev/sass/footer.scss
+++ b/dev/sass/footer.scss
@@ -48,7 +48,7 @@
 		text-align: center;
 		font-size: 14px;
 		font-weight: 400;
-		color: #afb4be;
+		color: #B1AFBE;
 		background: #ffffff;
 		margin-top: 120px;
 	}
