--- a/dev/sass/media/_media_max_width1199.scss
+++ b/dev/sass/media/_media_max_width1199.scss
@@ -1,10 +1,10 @@
 @media screen and (max-width: 1600px) {
     .home-top .slick-next {
-        right: -35px;
+        right: -50px;
     }
 
     .home-top .slick-prev {
-        left: -35px;
+        left: -50px;
     }
 }
 
@@ -64,6 +64,20 @@
 
     .block-black__text {
         margin-right: 30px;
+    }
+
+    .home-top {
+
+        .slick-prev,
+        .slick-next {
+            width: 35px;
+            right: -40px;
+        }
+
+        .slick-prev {
+            left: -40px;
+        }
+
     }
 }
 
@@ -213,6 +227,7 @@
     .phone-dropdown__menu {
         top: 67px;
     }
+
     .lang-dropdown__menu {
         top: 81px;
     }
@@ -227,17 +242,17 @@
         display: none;
     }
 
- 
 
-   
+
+
     .lang-dropdown__menu {
         top: 80px;
     }
 
-    .header .sub-menu{
+    .header .sub-menu {
         top: 68px;
     }
-    
+
     .phone-dropdown__menu {
         top: 80px;
     }
@@ -256,12 +271,15 @@
         .btn-icon {
             background-color: $primary-color-hover;
             border: 2px solid $primary-color-hover;
-            &:hover{
+
+            &:hover {
                 background-color: $primary-color-hover;
-                i{
-                    background-image: url("data:image/svg+xml,%3Csvg width='19' height='19' viewBox='0 0 19 19' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M13.7499 4.87499C13.6092 4.73438 13.4185 4.6554 13.2196 4.6554C13.0207 4.6554 12.83 4.73438 12.6894 4.87499L9.24986 8.31449L5.81036 4.87499C5.66972 4.73438 5.47899 4.6554 5.28011 4.6554C5.08124 4.6554 4.89051 4.73438 4.74986 4.87499C4.60926 5.01563 4.53027 5.20636 4.53027 5.40524C4.53027 5.60411 4.60926 5.79484 4.74986 5.93549L8.18936 9.37499L4.74986 12.8145C4.60926 12.9551 4.53027 13.1459 4.53027 13.3447C4.53027 13.5436 4.60926 13.7343 4.74986 13.875C4.89051 14.0156 5.08124 14.0946 5.28011 14.0946C5.47899 14.0946 5.66972 14.0156 5.81036 13.875L9.24986 10.4355L12.6894 13.875C12.83 14.0156 13.0207 14.0946 13.2196 14.0946C13.4185 14.0946 13.6092 14.0156 13.7499 13.875C13.8905 13.7343 13.9695 13.5436 13.9695 13.3447C13.9695 13.1459 13.8905 12.9551 13.7499 12.8145L10.3104 9.37499L13.7499 5.93549C13.8905 5.79484 13.9695 5.60411 13.9695 5.40524C13.9695 5.20636 13.8905 5.01563 13.7499 4.87499Z' fill='white'/%3E%3C/svg%3E%0A");  
+
+                i {
+                    background-image: url("data:image/svg+xml,%3Csvg width='19' height='19' viewBox='0 0 19 19' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M13.7499 4.87499C13.6092 4.73438 13.4185 4.6554 13.2196 4.6554C13.0207 4.6554 12.83 4.73438 12.6894 4.87499L9.24986 8.31449L5.81036 4.87499C5.66972 4.73438 5.47899 4.6554 5.28011 4.6554C5.08124 4.6554 4.89051 4.73438 4.74986 4.87499C4.60926 5.01563 4.53027 5.20636 4.53027 5.40524C4.53027 5.60411 4.60926 5.79484 4.74986 5.93549L8.18936 9.37499L4.74986 12.8145C4.60926 12.9551 4.53027 13.1459 4.53027 13.3447C4.53027 13.5436 4.60926 13.7343 4.74986 13.875C4.89051 14.0156 5.08124 14.0946 5.28011 14.0946C5.47899 14.0946 5.66972 14.0156 5.81036 13.875L9.24986 10.4355L12.6894 13.875C12.83 14.0156 13.0207 14.0946 13.2196 14.0946C13.4185 14.0946 13.6092 14.0156 13.7499 13.875C13.8905 13.7343 13.9695 13.5436 13.9695 13.3447C13.9695 13.1459 13.8905 12.9551 13.7499 12.8145L10.3104 9.37499L13.7499 5.93549C13.8905 5.79484 13.9695 5.60411 13.9695 5.40524C13.9695 5.20636 13.8905 5.01563 13.7499 4.87499Z' fill='white'/%3E%3C/svg%3E%0A");
                 }
             }
+
             i {
                 width: 30px;
                 height: 30px;
@@ -270,7 +288,7 @@
         }
     }
 
-   
+
 
     .home-top__benefits-item {
         max-width: 195px;
@@ -388,10 +406,6 @@
     .footer__title {
         margin-bottom: 20px;
     }
-
-    .home-top .slick-next {
-        display: none;
-    }
 }
 
 @media screen and (max-width: 991px) {
@@ -414,10 +428,12 @@
         justify-content: center;
         align-items: center;
         position: absolute;
-        padding-top: 10px;
+        padding: 17px 12px;
         left: 0;
         right: 0;
-        bottom: 20px;
+        bottom: 0;
+        background-color: $primary-color;
+
         .btn {
             width: 100%;
             max-width: 280px;
@@ -444,16 +460,26 @@
         bottom: 0;
         top: 88px;
         width: 100%;
-        background-color: #edf1f4;
+        @include custom-decorate-r;
         transition: all 0.3s ease-in-out;
 
-        &::after {
+        &::after,
+        &::before {
             content: "";
             position: absolute;
             left: 0;
             right: 0;
             bottom: 80px;
-            border-top: 2px solid #cbd0da;
+            border-top: 1px solid #5864F9;
+        }
+
+        &::before {
+
+            left: 0;
+            right: 0;
+            bottom: inherit;
+            top: 0;
+            border-top: 1px solid #5864F9;
         }
 
         ul {
@@ -467,7 +493,6 @@
         }
 
         >ul>li {
-            border-bottom: 1px solid #cbd0da;
             flex-direction: column;
 
             &:last-child {
@@ -475,7 +500,7 @@
             }
 
             >a {
-                padding: 8px 0px;
+                padding: 12px 0px;
             }
         }
     }
@@ -509,15 +534,6 @@
         top: 16px;
         width: 15px;
         height: 15px;
-    }
-
-    .header .menu-item-has-children.open-menu>a {
-        color: #0b305d;
-    }
-
-    .header .menu-item-has-children.open-menu svg path,
-    .header .menu-item-has-children>svg:hover path {
-        fill: #005bbb !important;
     }
 
     .header__menu-wrap ul li+li {
@@ -608,7 +624,7 @@
         border-radius: 20px;
     }
 
-    .item-project__wrap-sum > div {
+    .item-project__wrap-sum>div {
         padding: 10px 15px;
     }
 
@@ -751,10 +767,6 @@
         background: linear-gradient(180deg, rgba(4, 30, 53, 0) 0%, #041629 80.73%);
     }
 
-    .home-top__benefits {
-        background: #041629;
-    }
-
     .home-top__benefits .row-custom {
         justify-content: center;
     }
@@ -816,7 +828,9 @@
     }
 
     .about__text h2 {
+        font-size: 28px;
         margin-bottom: 23px;
+        text-align: center;
     }
 
     .about .row-btn {
@@ -979,9 +993,7 @@
         margin-top: 10px;
     }
 
-    .header a:hover:not(.btn) {
-        color: #0b305d;
-    }
+
 
     .phone-dropdown {
         position: static;
