--- a/dev/sass/other/form-block.scss
+++ b/dev/sass/other/form-block.scss
@@ -174,7 +174,7 @@
     font-size: 16px;
     line-height: 30px;
     width: 100%;
-    color: #626874;
+    color: #5C5F65;
     font-weight: 400;
     height: 54px;
     float: none;
