--- a/dev/sass/page/about-page.scss
+++ b/dev/sass/page/about-page.scss
@@ -55,7 +55,7 @@
     }
 
     p {
-        color: #AFB4BE;
+        color: #B1AFBE;
         font-size: 18px;
         text-align: center;
         padding: 0 12px;
