--- a/dev/sass/page/project-item.scss
+++ b/dev/sass/page/project-item.scss
@@ -109,7 +109,7 @@
     &__date {
         font-size: 16px;
         line-height: 1.5;
-        color: #AFB4BE;
+        color: #B1AFBE;
     }
 
     &__amount {
