--- a/dev/templates/project-slider.html
+++ b/dev/templates/project-slider.html
@@ -5,9 +5,7 @@
             <span>Благодійні проекти</span>
         </h2>
         <p class="title-descr">
-            «Перша Зірка» не лише збирає кошти на ті чи інші потреби. Ми об’єднуємо
-            самих різних людей заради спільної мети. Разом ми збережемо мир и
-            спасемо світ!
+            Фонд «Обіруч» не лише збирає кошти на ті чи інші потреби. Ми об’єднуємо самих різних людей заради спільної мети. Разом ми збережемо мир и спасемо світ!
         </p>
         <div class="slider-project slider-def slider-def-three-el">
             <div class="item-project">
@@ -18,9 +16,9 @@
                     <div class="item-project__title">
                         <a href="project-item.html">Збір коштів на прихисток для біжинців на Вінничині</a>
                         <div class="progress">
-                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60" height="60" width="60" data-value="55">
-                                <circle class="bg" cx="30" cy="30" r="25" fill="none" stroke="#EDF1F4" stroke-miterlimit="10" />
-                                <circle class="meter" cx="30" cy="30" r="25" fill="none" stroke="#FFD018" stroke-dashoffset="157" stroke-dasharray="157" stroke-miterlimit="10" />
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60" height="60" width="60" data-value="57">
+                                <circle class="bg" cx="30" cy="30" r="25" fill="none" stroke="#F5F2EA" stroke-miterlimit="10" />
+                                <circle class="meter" cx="30" cy="30" r="25" fill="none" stroke="#FFD600" stroke-dashoffset="157" stroke-dasharray="157" stroke-miterlimit="10" />
                             </svg>
                         </div>
                     </div>
@@ -49,8 +47,8 @@
                         <a href="project-item.html">Допомога захисникам та захисницям України</a>
                         <div class="progress">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60" height="60" width="60" data-value="44">
-                                <circle class="bg" cx="30" cy="30" r="25" fill="none" stroke="#EDF1F4" stroke-miterlimit="10" />
-                                <circle class="meter" cx="30" cy="30" r="25" fill="none" stroke="#FFD018" stroke-dashoffset="157" stroke-dasharray="157" stroke-miterlimit="10" />
+                                <circle class="bg" cx="30" cy="30" r="25" fill="none" stroke="#F5F2EA" stroke-miterlimit="10" />
+                                <circle class="meter" cx="30" cy="30" r="25" fill="none" stroke="#FFD600" stroke-dashoffset="157" stroke-dasharray="157" stroke-miterlimit="10" />
                             </svg>
                         </div>
                     </div>
@@ -79,8 +77,8 @@
                         <a href="project-item.html">Збір коштів на прихисток для біжинців на Вінничині</a>
                         <div class="progress">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60" height="60" width="60" data-value="25">
-                                <circle class="bg" cx="30" cy="30" r="25" fill="none" stroke="#EDF1F4" stroke-miterlimit="10" />
-                                <circle class="meter" cx="30" cy="30" r="25" fill="none" stroke="#FFD018" stroke-dashoffset="157" stroke-dasharray="157" stroke-miterlimit="10" />
+                                <circle class="bg" cx="30" cy="30" r="25" fill="none" stroke="#F5F2EA" stroke-miterlimit="10" />
+                                <circle class="meter" cx="30" cy="30" r="25" fill="none" stroke="#FFD600" stroke-dashoffset="157" stroke-dasharray="157" stroke-miterlimit="10" />
                             </svg>
                         </div>
                     </div>
@@ -109,8 +107,8 @@
                         <a href="project-item.html">Допомога захисникам та захисницям України</a>
                         <div class="progress">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60" height="60" width="60" data-value="100">
-                                <circle class="bg" cx="30" cy="30" r="25" fill="none" stroke="#EDF1F4" stroke-miterlimit="10" />
-                                <circle class="meter" cx="30" cy="30" r="25" fill="none" stroke="#FFD018" stroke-dashoffset="157" stroke-dasharray="157" stroke-miterlimit="10" />
+                                <circle class="bg" cx="30" cy="30" r="25" fill="none" stroke="#F5F2EA" stroke-miterlimit="10" />
+                                <circle class="meter" cx="30" cy="30" r="25" fill="none" stroke="#FFD600" stroke-dashoffset="157" stroke-dasharray="157" stroke-miterlimit="10" />
                             </svg>
                         </div>
                     </div>
